# movesense-py

./: .gitignore  Movesense_ECG_datalogger_gui.py  Movesense_Flash_datalogger_gui.py  README.md  csv2edf.py  datalogger_gui.py  datalogger_tool.py  ms_json2csv.py  plot_csv.py  pyproject.toml  requirements.txt  sbem2json  sensor_command.py  test_datalogger_tool.py  version_info.txt
.github/workflows/: ci.yml
docs/: movesense-api.md  sota-physio-ml.md
output_csv/: MeasECGmV.csv  MeasECGmV.edf  log_002030_5_MeasECGmV.csv
scripts/: capture_validation.py
specs/008-sbem-device-protocol/checklists/: requirements.md
src/movensense/: cli.py  protocol.py
src/movensense/physio/: ecg.py  motion.py  quality.py  segmentation.py
src/movensense/server/: __init__.py  app.py  auth.py  scanner.py  stream.py
src/movesense/: __init__.py  cli.py  json2zarr.py  protocol.py  sensor.py  storage.py
src/movesense/physio/: __init__.py  dsp.py  ecg.py  events.py  orientation.py  pipeline.py
src/movesense/server/: app.py  auth.py  manifest.py  scanner.py  timeline.py  viewer.py
tests/: conftest.py  test_auth.py  test_cli.py  test_ecg.py  test_events.py  test_json2zarr.py  test_learned.py  test_manifest.py  test_motion.py  test_pinn.py  test_pipeline.py  test_protocol.py  test_scanner.py  test_segmentation.py  test_server.py  test_storage.py  test_stream.py  test_timeline.py  test_ui.py  test_validation.py  test_viewer.py  test_viewer_ui.py  test_ws.py
tests/fixtures/multi_session/: session_0.json  session_1.json
tests/fixtures/validation/: fixture.json
(+24 files in other folders)
