[project]
name = "movensense"
version = "2026.04.04"
description = "Python toolkit for Movesense BLE sensor devices"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bleak>=1.1.1",
    "numpy>=1.26",
    "pandas>=2.2",
    "pyedflib>=0.1.34",
    "aiofiles>=25.1",
    "zarr>=3.0",
    "click>=8.0",
    "scipy>=1.14",
    "neurokit2>=0.2",
    "ruptures>=1.1",
    "stumpy>=1.12",
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "websockets>=15.0",
    "pyobjc-core>=11.1; sys_platform == 'darwin'",
    "pyobjc-framework-Cocoa>=11.1; sys_platform == 'darwin'",
    "pyobjc-framework-CoreBluetooth>=11.1; sys_platform == 'darwin'",
    "pyobjc-framework-libdispatch>=11.1; sys_platform == 'darwin'",
]

[project.optional-dependencies]
ml = [
    "torch>=2.0",
    "scikit-learn>=1.5",
    "hmmlearn>=0.3",
    "ahrs>=0.3",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.28",
    "playwright>=1.50",
    "pytest-playwright>=0.6",
]

[project.scripts]
movensense = "movensense.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/movensense"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
